--- a/simple-calculator/index.html
+++ b/simple-calculator/index.html
@@ -31,7 +31,7 @@
       <button class="number">7</button>
       <button class="number">8</button>
       <button class="number">9</button>
-      <button class="operation">x</button>
+      <button class="operation">*</button>
       <button class="number">.</button>
       <button class="number">0</button>
       <button class="span-2 equal">=</button>
